--- a/Notebook3_starter.ipynb
+++ b/Notebook3_starter.ipynb
@@ -32,7 +32,7 @@
       },
       "source": [
         "# Notebook #3\n",
-        "**Due**: 9/28/23 by 11:59 pm.\n",
+        "**Extended Due Date**: 10/03/23 by 11:59 pm.\n",
         "\n",
         "**Name**:\n",
         "\n",
@@ -516,7 +516,7 @@
         "\n",
         "Modify your code from Notebook #2/class to use cross validation.\n",
         "- Don't forget that you're doing **regression**--pay attention to what you need to change to make this do regression rather than classification\n",
-        "- make sure to implement an appropriate **regression metric** - you can use any of the ones we talked about in class, but code it up yourself. Avoid using for loops in your calculation, they're unnecesary.\n",
+        "- make sure to implement an appropriate **regression metric** - you can use any of the ones we talked about in class, but code it up yourself.\n",
         "- The sample code uses the word 'classification' a lot in the name of things... make sure you use the word 'regression' instead if you write similar functions.\n",
         "- your code should be clear and readable.\n"
       ]
